added initializeNotes method to DataManager and updated toString method for NoteInfo to display proper in the note list

--- a/app/src/main/res/layout/fragment_note_list.xml
+++ b/app/src/main/res/layout/fragment_note_list.xml
@@ -39,6 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
+        android:backgroundTint="#C37DE1"
         android:clickable="true"
         android:foregroundGravity="bottom"
         android:src="@android:drawable/ic_menu_add"
